--- a/indexgit.html
+++ b/indexgit.html
@@ -9,7 +9,7 @@
 <body>
     <div class="desfoque">
         <div class="navbar">
-            <img href="#" id="logo" src="assets/images/icons8-arch-linux-48 (1).png" alt="" width="" >
+            <img href="#" id="logo" src="Static Page/assets/images/icons8-arch-linux-48 (1).png" alt="" width="" >
             <div class="nav-button">
                 <button class="btn-nav b1" href="#" id="linkNew">Sou novo por aqui</button>
                 <button class="btn-nav b2" href="#" id="linkOld">Já tenho cadastro</button>
