--- a/indexgit.html
+++ b/indexgit.html
@@ -77,6 +77,10 @@
         <span class="close-btn" id="closeCard">&times;</span>
         <div class="message" id="messageText"></div>
     </div>
+    <footer>
+        <a href="https://www.linkedin.com/in/samuel-gomes-dourado-0107b4232/" target="_blank"><img src="Static Page/assets/images/linkedin.svg" alt="Linkedin Logo"></a>
+        <a href="https://github.com/DouradoCtrl" target="_blank"><img src="Static Page/assets/images/github.svg" alt="GitHub Logo"></a>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="Static Page/assets/JS/script.js"></script>
