--- a/Static Page/index.html
+++ b/Static Page/index.html
@@ -68,8 +68,6 @@
                     </div>
                 </div>
             </div> 
-            
-            
         </div>
     </div>
     <!-- card flutuante mensagens -->
@@ -77,6 +75,10 @@
         <span class="close-btn" id="closeCard">&times;</span>
         <div class="message" id="messageText"></div>
     </div>
+    <footer>
+        <a href="https://www.linkedin.com/in/samuel-gomes-dourado-0107b4232/" target="_blank"><img src="assets/images/linkedin.svg" alt="Linkedin Logo"></a>
+        <a href="https://github.com/DouradoCtrl" target="_blank"><img src="assets/images/github.svg" alt="GitHub Logo"></a>
+    </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <script src="assets/JS/script.js"></script>
